# Nucleus

./: .env.example  .gitignore  compose.yml  nucleus-action-plan.txt
backend/: CORS_config.py  Dockerfile  main.py  main_constants.py  pyproject.toml  start.py
backend/config/: credentials.example.json  cuentaServicio.example.json
backend/datos_microservice/: aplication.py
backend/datos_microservice/api/: __init__.py  administrador_router.py  area_router.py  candidato_router.py  googleOauth_router.py  login_router.py  paciente_router.py  terapeuta_router.py  voluntario_router.py
backend/datos_microservice/models/: Administrador.py  Area.py  Candidato.py  Paciente.py  Terapeuta.py  Voluntario.py  __init__.py
backend/datos_microservice/services/: administrador_service.py  area_service.py  candidato_service.py  googleOauth_service.py  login_service.py  paciente_service.py  terapeuta_service.py  voluntario_service.py
backend/db/: database.py
backend/documentos_microservice/: api.py  aplication.py
backend/documentos_microservice/models/: Document.py  __init__.py
backend/documentos_microservice/services/: document_service.py
backend/kanban_microservice/: aplication.py
backend/kanban_microservice/api/: __init__.py  kanban_router.py
backend/kanban_microservice/models/: KanbanBoard.py  KanbanCard.py  KanbanColumn.py  __init__.py
backend/kanban_microservice/services/: kanban_board_service.py  kanban_card_service.py  kanban_column_service.py  (+1 more)
backend/pago_microservice/: aplication.py  constants.py
backend/reuniones_microservice/: aplication.py
(+94 files in other folders)
